# TechClass

./: .gitignore  404.html  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  portfolio.html  rsbuild.config.ts  sitemap.xml  tailwind.config.js  tsconfig.json
App/: eslint.config.js  index.html  package.json  postcss.config.js  rsbuild.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
App/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
App/src-tauri/src/: contestants.rs  error.rs  frontend_fs.rs  lib.rs  logs.rs  main.rs  shared.rs  storage.rs
app/: disable.html  encrypt.html  index.html  layout.html  markdown.html  page.html
assets/: 404.html-Bid3rfcC.js  404.html-DmYpiGys.js  404.html-wScuKT-c.js  app-C5Bv_afz.js  app-D_t0740C.js  app-t1wgZW37.js  baz.html-BEZwvtvo.js  baz.html-D6DzIwSb.js  baz.html-WAgat29j.js  disable.html-B3PNgQ8H.js  disable.html-CcYbf6Fb.js  disable.html-Coqjm-I5.js  encrypt.html-BahmSDki.js  encrypt.html-BrsTrmL3.js  encrypt.html-CgqwYCiM.js  index.html-BFdTIhCW.js  index.html-BbB9NvGa.js  index.html-BjSaWEtw.js  index.html-C6OnU4s-.js  index.html-CD1OF-fk.js  index.html-CLVoWsqE.js  index.html-D4fAG0d6.js  index.html-DKbnz86O.js  index.html-DTbeXLvq.js  index.html-DUTX_U6o.js  index.html-DbOq5Tck.js  index.html-DwjO4Ckh.js  index.html-DyljoDRN.js  index.html-FlAy8GGR.js  index.html-HmW0ANvH.js  index.html-JaOzbKGr.js  index.html-LJTPZKQT.js  index.html-x15kZ64g.js  layout.html-BPFVyN6W.js  layout.html-G89cC7rP.js  layout.html-UVR_t3zq.js  markdown.html-BkK5ecq0.js  (+14 more)
(+221 files in other folders)
